# deepin-turbo

./: .gitignore  AUTHORS  CHANGELOG  CMakeLists.txt  INSTALL  README  README.dox  README.md  README.zh_CN.md  TODO  configure
.reuse/: dep5
debian/: api  (+36 more)
examples/boosted-qml/with-cmake/: CMakeLists.txt  README  main.cpp  main.qml
src/: CMakeLists.txt
src/binfmt/: desktop.conf
src/booster-desktop/: CMakeLists.txt  booster-desktop.cpp  booster-desktop.h  desktop.conf
src/booster-dtkdeclarative/: CMakeLists.txt  booster-dtkdeclarative.cpp  booster-dtkdeclarative.h
src/booster-dtkwidget/: CMakeLists.txt  booster-dtkwidget.cpp  booster-dtkwidget.h  deepin-turbo-booster-dtkwidget.service
src/booster-generic/: CMakeLists.txt  booster-generic.cpp  booster-generic.h  booster-generic.service
src/common/: coverage.h  eventhandler.cpp  eventhandler.h  protocol.h  report.c  report.h
src/ebooster/: CMakeLists.txt  booster-e.service  ebooster.cpp  ebooster.h  pluginfactory.cpp
src/invoker/: CMakeLists.txt  invokelib.c  invokelib.cpp  invokelib.h  invoker.c  invoker.cpp  report.c  report.h  search.c  search.h  whitelist.h
src/launcher/: CMakeLists.txt  appdata.cpp  appdata.h  booster.cpp  booster.h  boosterfactory.cpp  boosterfactory.h  boosterkiller.cpp  boosterkiller.h  connection.cpp  connection.h  daemon.cpp  daemon.h  launcher.c  logger.cpp  logger.h  main.cpp  mbooster.cpp  mbooster.h  monitorbooster.cpp  monitorbooster.h  preload.h  qtbooster.cpp  qtbooster.h  wrtbooster.cpp  wrtbooster.h
src/launcherlib/: CMakeLists.txt  appdata.cpp  appdata.h  booster-qtwidget  booster.cpp  booster.h  boosterfactory.cpp  boosterfactory.h  boosterpluginregistry.cpp  boosterpluginregistry.h  connection.cpp  connection.h  daemon.cpp  daemon.h  logger.cpp  logger.h  main.cpp  mbooster.cpp  mbooster.h  monitorbooster.cpp  monitorbooster.h  qtbooster.cpp  singleinstance.cpp  singleinstance.h  socketmanager.cpp  socketmanager.h  wrtbooster.cpp  wrtbooster.h
src/mbooster/: CMakeLists.txt  eventhandler.cpp  eventhandler.h  mbooster.cpp  mbooster.h  pluginfactory.cpp
src/qdeclarativebooster/: CMakeLists.txt  MDeclarativeCache  README-QDECLARATIVEBOOSTER  eventhandler.cpp  eventhandler.h  mdeclarativecache.cpp  mdeclarativecache.h  mdeclarativecache_p.h  pluginfactory.cpp  qdeclarativebooster.cpp  qdeclarativebooster.h  qdeclarativeboostercache.cpp  qdeclarativeboostercache.h  qdeclarativeboostercache_p.h  testabilityinterface.h
src/qtbooster/: CMakeLists.txt  pluginfactory.cpp  qtbooster.cpp  qtbooster.h
src/scripts/: applauncherd  applauncherd-debug
src/single-instance/: CMakeLists.txt  main.cpp
src/wrtbooster/: CMakeLists.txt  eventhandler.cpp  pluginfactory.cpp  wrtbooster.cpp  wrtbooster.h
tests/: CMakeLists.txt
tests/Common/unittests/: CMakeLists.txt  tests.xml
tests/Harmattan/TestScripts/: CMakeLists.txt  fala_wid  get-coordinates.rb  tc_splash.rb  tc_theming.rb  test-boot-mode.py  test-core-dump.py  test-func-launcher.py  test-perf-mbooster.py  test-perf.rb  test-security.py  test-single-instance.py  ts_prestartapp.rb  utils.py
tests/Harmattan/art-tests/: tests.xml
tests/Harmattan/bug-tests/: CMakeLists.txt  tests.xml
tests/Harmattan/functests/: tests.xml
tests/Harmattan/perftests/: CMakeLists.txt  tests.xml
tests/Harmattan/red-tests/: tests.xml
tests/Meego/TestScripts/: fala_xres_wl  tc_theming.rb  test-func-launcher.py  test-perf-mbooster.py  test-perf.rb  utils.py
tests/Meego/art-tests/: tests.xml
tests/Meego/functests/: CMakeLists.txt  tests.xml
tests/Meego/perftests/: CMakeLists.txt  tests.xml
tests/TestApps/creds/: CMakeLists.txt  creds_test.cpp  creds_test.pro  fala_ft_creds
tests/TestApps/fala_gettime/: CMakeLists.txt  fala_gettime.cpp
tests/TestApps/fala_status/: CMakeLists.txt  fala_status.cpp
tests/TestApps/helloworld/: CMakeLists.txt  helloworld.cpp  helloworld.pro
tests/TestApps/pixelchanged/: CMakeLists.txt  main.c
tests/TestApps/testapp/: CMakeLists.txt  com.nokia.fala_testapp.service  com.nokia.fala_wol.service  fala_wl.desktop  fala_wol.desktop  main.cpp  testapp.pro
tests/TestScripts/: CMakeLists.txt  fala_sf.py  fala_wid  fala_xres_wl  fala_xres_wol  tc_theming.rb  test-func-launcher.py  test-perf-mbooster.py  test-perf.rb  test-security.py  ts_prestartapp.rb  utils.py
tests/TestScripts/signal-forward/: CMakeLists.txt  fala_sf_qt.py  fala_sf_wrt.py
tests/art-tests/: CMakeLists.txt  tests.xml
tests/bug-tests/: tests.xml
tests/common/unittests/: CMakeLists.txt  tests.xml
tests/functests/: CMakeLists.txt  tests.xml
tests/harmattan/apps-tests/: CMakeLists.txt  tests.xml
tests/harmattan/art-tests/: CMakeLists.txt  tests.xml
tests/harmattan/daemon-tests/: CMakeLists.txt  tests.xml
tests/harmattan/functests/: CMakeLists.txt  tests.xml
tests/harmattan/invoker-tests/: CMakeLists.txt  tests.xml
tests/harmattan/red-tests/: CMakeLists.txt  tests.xml
tests/harmattan/testapps/: applauncherd-token-test_1.0_armel.deb  applauncherd-token-test_1.1_armel.deb  applauncherd-usrlib-test_1.0_armel.deb  applauncherd-usrlib-test_1.1_armel.deb
tests/harmattan/testscripts/: CMakeLists.txt  get-coordinates.rb  tc_splash.rb  tc_theming.rb  test-boot-mode.py  test-core-dump.py  test-daemons.py  test-func-launcher.py  test-invoker.py  test-perf.rb  test-security.py  test-single-instance.py  ts_prestartapp.rb  utils.py
tests/meego/art-tests/: CMakeLists.txt  tests.xml
tests/meego/bug-tests/: CMakeLists.txt  tests.xml
tests/meego/functests/: tests.xml
tests/meego/perftests/: tests.xml
tests/meego/testscripts/: CMakeLists.txt  utils.py
tests/perftests/: CMakeLists.txt  tests.xml
tests/unittests/: CMakeLists.txt  tests.xml
tests/unittests/ut_booster/: CMakeLists.txt  ut_booster.cpp  ut_booster.h
tests/unittests/ut_boosterfactory/: CMakeLists.txt  ut_boosterfactory.cpp  ut_boosterfactory.h
tests/unittests/ut_connection/: CMakeLists.txt  ut_connection.cpp  ut_connection.h
tests/unittests/ut_daemon/: CMakeLists.txt  ut_daemon.cpp
tests/unittests/ut_mbooster/: CMakeLists.txt  ut_mbooster.cpp  ut_mbooster.h
(+311 files in other folders)
