# Sub build: invoker
add_subdirectory(invoker)

# Sub build: launcher
add_subdirectory(launcher)

# Sub build: launcher library
add_subdirectory(launcherlib)

# Sub build: mbooster plugin
add_subdirectory(mbooster)

# Sub build: wrtbooster plugin
add_subdirectory(wrtbooster)

# Sub build: qtbooster plugin
add_subdirectory(qtbooster)

# Sub build: single-instance binary / library
add_subdirectory(single-instance)

