# Sub build: meego/testscripts 
add_subdirectory(meego/testscripts)

# Sub build: meego/art-tests
add_subdirectory(meego/art-tests)

# Sub build: meego/bug-tests
add_subdirectory(meego/bug-tests)

# Sub build: meego/functests
add_subdirectory(meego/functests)

# Sub build: meego/perftests
add_subdirectory(meego/perftests)

# Sub build: common/unittests
add_subdirectory(common/unittests)

# Sub build: common/testapps/fala_status
add_subdirectory(common/testapps/fala_status)

# Sub build: common/testapps/fala_wait
add_subdirectory(common/testapps/fala_wait)

# Sub build: common/testapps/fala_gettime
add_subdirectory(common/testapps/fala_gettime)

# Sub build: common/testapps/fala_gettime_ms
add_subdirectory(common/testapps/fala_gettime_ms)

# Sub build: common/testapps/pixelchanged
add_subdirectory(common/testapps/pixelchanged)

# Sub build: common/testapps/fala_windowid
add_subdirectory(common/testapps/fala_windowid)

